# mcp-yt-researcher

./: README.md  main.py  pyproject.toml  requirement.txt
src/: env.py  research_selector.py  transcript_writer.py  youtube.py
