[project]
name = "mcp-yt-reseacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.1",
    "dotenv>=0.9.9",
    "fastmcp>=3.3.1",
    "langchain>=1.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.34.1",
]
